# Boilerplate

./: .xmodmapKeys  .xscreensaver  CMakeLists.txt  Cope.gd  Cope.py  Game.py  LandingMenu.py  LoadingBar.py  Option.py  Point.py  README.md  ScrolledFrame.py  Text.py  argparse boilerplate.py  bashrc.sh  keybindings.json  settings.json
Python/: Animation.py  CreateOptionMenu.py  GuiScene.py  LoadingScreen.py  Scene.py  Tooltip.py  main.py
